--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -1,5 +1,5 @@
 # Nome da Actions:  
-name: Snake
+name: Snake Game
 
 # Controlador do tempo que sera feito a atualização dos arquivos.
 on:
@@ -23,7 +23,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: Gpontes143 #Seu usuario
+          github_user_name: Gpontes143
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
