--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,10 @@ name: generate animation
 on:
   # run automatically every 24 hours
   schedule:
-    - cron: "0 */24 * * *" 
-  
+    - cron: "0 */24 * * *"   
+    
+   # allows to manually run the job at any time
+  workflow_dispatch:
   # run on every push on the master branch
   push:
     branches:
