--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,9 @@ on:
     - cron: "0 */24 * * *"   
     
    # allows to manually run the job at any time
-  workflow_dispatch:
+ workflow_dispatch:
+    branches:
+      - main
   # run on every push on the master branch
   push:
     branches:
